# prompt-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
src/components/: CommandPalette.vue  ConfirmDialog.vue  IconButton.vue  ImportPreviewDialog.vue  PromptCard.vue  PromptDetail.vue  PromptEditor.vue  PromptList.vue  SearchHelp.vue  Sidebar.vue  StatsPage.vue  TagInput.vue  ToastNotification.vue  UndoDeleteBar.vue
src/types/: index.ts
src/utils/: api.ts  colors.ts
