[package]
name = "prompt-manager"
version = "0.1.0"
edition = "2021"
authors = ["Akko"]
description = "A local-first desktop prompt manager"
license = "MIT"
repository = "https://github.com/AkkoForMe/prompt-manager"

[lib]
name = "prompt_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
